--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="style/style.css">
 	<title>сайт АЛИ</title>
 </head>
 <body>
 	<header>
-		<img src="images/NIKE.jpg" width="80px" height="80px">
+		<nav>
+		 <img src="images/NIKE.jpg" width="80px" height="80px">
+        <a href="index.html"> Главная</a>
+        <a href="index2.html">ALI_EMIL</a>
+		</nav>
 	</header>
 		<main>
           <h1> спортивная одежда NIKE</h1>
@@ -18,7 +23,12 @@
           <p> можете у меня купить крутые вещи и др.</p>
 		</main>
 		<footer>
-         <p> мои контакты:+7(705) 718 21 91, райский уголок.</p>
+         <p> мои контакты:</p>
+         <p>+7(705) 718 21 91</p>
+         <p> райский уголок.</p>
+         <img src="images/facebook-logo-new.png">
+         <img src="images/v-telegrame-na-pk-ne-gruzyatsya-kartinki-i-video_1669199664752344282.jpg">
+         <img src="images/BrcQEzD7vieEk9catAA6lg.jpg">
 		</footer>
 </body>
 </html>
