--- a/index2.html
+++ b/index2.html
@@ -24,9 +24,9 @@
          <p> мои контакты:</p>
          <p>+7(705) 718 21 91</p>
          <p> райский уголок.</p>
-         <img src="images/png-transparent-facebook-icon-social-media-computer-icons-facebook-facebook-rectangle-logo-website.png">
+         <img src="images/facebook-logo-new.png">
+         <img src="images/v-telegrame-na-pk-ne-gruzyatsya-kartinki-i-video_1669199664752344282.jpg">
          <img src="images/BrcQEzD7vieEk9catAA6lg.jpg">
-         <img src="images/unnamed/png">
 		</footer>
 </body>
 </html>
