--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 <body>
 	<header>
 		<nav>
-		 <img src="images/NIKE.jpg" width="80px" height="80px">
+		<img class="logo" src="images/NIKE.jpg" width="80px" height="80px">
         <a href="index.html"> Главная</a>
         <a href="index2.html">ALI_EMIL</a>
+        <a href="index3.html">Магазинчик</a>
 		</nav>
 	</header>
 		<main>
@@ -23,12 +24,17 @@
           <p> можете у меня купить крутые вещи и др.</p>
 		</main>
 		<footer>
-         <p> мои контакты:</p>
+        			<div class="adress"> 
+				<p> мои контакты:</p>
          <p>+7(705) 718 21 91</p>
          <p> райский уголок.</p>
-         <img src="images/facebook-logo-new.png">
+     </div>
+         
+         <div class="social"> 
+         	<img src="images/facebook-logo-new.png">
          <img src="images/v-telegrame-na-pk-ne-gruzyatsya-kartinki-i-video_1669199664752344282.jpg">
          <img src="images/BrcQEzD7vieEk9catAA6lg.jpg">
+     </div>
 		</footer>
 </body>
 </html>
