--- a/index2.html
+++ b/index2.html
@@ -9,24 +9,35 @@
 <body>
 	<header>
 		<nav> 
-			<img src="images/NIKE.jpg" width="80px" height="80px">
+			<img class="logo" src="images/NIKE.jpg" width="80px" height="80px">
         <a href="index.html"> Главная</a>
         <a href="index2.html">ALI_EMIL</a>
+        <a href="index3.html">Магазинчик</a>
 		</nav>
 	</header>
 	<main>
 		<h1> МЫ ДРУЗЬЯ</h1>
-		<img src="images/committee.jpg">
-		<img src="images/715a59d4-5419-4ba1-8789-a8d1f979b057.png">
+		<div class="gallery">
+			<img src="images/committee.jpg">
+		<img src="images/Без названия.png">
 		<img src="images/samye-neobychnye-krossovki_16006179682108784770.jpg">
+		<img src="images/Без названия (2).jpg">
+	</div>
+		
 	</main>
 		<footer>
-         <p> мои контакты:</p>
+			<div class="adress"> 
+				<p> мои контакты:</p>
          <p>+7(705) 718 21 91</p>
          <p> райский уголок.</p>
-         <img src="images/facebook-logo-new.png">
+     </div>
+         
+         <div class="social"> 
+         	<img src="images/facebook-logo-new.png">
          <img src="images/v-telegrame-na-pk-ne-gruzyatsya-kartinki-i-video_1669199664752344282.jpg">
          <img src="images/BrcQEzD7vieEk9catAA6lg.jpg">
+     </div>
+         
 		</footer>
 </body>
 </html>
